# src/main/java/com/hasangurbuz/vehiclemanager/api/ApiContext.java
@@ -1,4 +1,4 @@
-package com.hasangurbuz.vehiclemanager.dto;
+package com.hasangurbuz.vehiclemanager.api;
 
 import com.hasangurbuz.vehiclemanager.domain.UserRole;
 import lombok.Getter;
@@ -6,7 +6,7 @@ import lombok.Setter;
 
 @Getter
 @Setter
-public class UserContext {
+public class ApiContext {
     private Long userId;
     private String name;
     private String surname;
@@ -14,16 +14,16 @@ public class UserContext {
     private String companyName;
     private UserRole userRole;
 
-    private static final ThreadLocal<UserContext> threadLocal = new InheritableThreadLocal<>();
+    private static final ThreadLocal<ApiContext> threadLocal = new InheritableThreadLocal<>();
 
-    public static UserContext create() {
-        UserContext context = new UserContext();
+    public static ApiContext create() {
+        ApiContext context = new ApiContext();
         threadLocal.set(context);
 
         return context;
     }
 
-    public static UserContext get() {
+    public static ApiContext get() {
         return threadLocal.get();
     }
 
