# src/main/java/com/hasangurbuz/vehiclemanager/api/web/VehicleApiController.java
@@ -1,10 +1,11 @@
-package com.hasangurbuz.vehiclemanager.controller;
+package com.hasangurbuz.vehiclemanager.api.web;
 
+import com.hasangurbuz.vehiclemanager.api.ApiException;
 import com.hasangurbuz.vehiclemanager.domain.Vehicle;
-import com.hasangurbuz.vehiclemanager.mapper.VehicleMapper;
+import com.hasangurbuz.vehiclemanager.api.mapper.VehicleMapper;
 import com.hasangurbuz.vehiclemanager.service.VehicleService;
 import org.openapitools.api.VehicleApi;
-import org.openapitools.model.VehicleDto;
+import org.openapitools.model.VehicleDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -12,7 +13,7 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.List;
 
 @RestController
-public class VehicleController implements VehicleApi {
+public class VehicleApiController implements VehicleApi {
 
     @Autowired
     private VehicleService vehicleService;
@@ -21,20 +22,20 @@ public class VehicleController implements VehicleApi {
     private VehicleMapper vehicleMapper;
 
     @Override
-    public ResponseEntity<VehicleDto> vehicleIdPost(String id) {
-        VehicleDto vehicleDto = vehicleMapper.toDto(vehicleService.getVehicleById(Long.valueOf(id)));
+    public ResponseEntity<VehicleDTO> vehicleIdPost(String id) {
+        VehicleDTO vehicleDto = vehicleMapper.toDto(vehicleService.getVehicleById(Long.valueOf(id)));
         return ResponseEntity.ok(vehicleDto);
     }
 
     @Override
-    public ResponseEntity<List<VehicleDto>> vehiclePost() {
+    public ResponseEntity<List<VehicleDTO>> vehiclePost() {
         List<Vehicle> vehicles = vehicleService.getVehicles();
-        List<VehicleDto> vehicleDtos = vehicleMapper.toDtoList(vehicles);
+        List<VehicleDTO> vehicleDtos = vehicleMapper.toDtoList(vehicles);
         return ResponseEntity.ok(vehicleDtos);
     }
 
     @Override
-    public ResponseEntity<VehicleDto> vehicleAddPost(VehicleDto vehicleDto) {
+    public ResponseEntity<VehicleDTO> vehicleAddPost(VehicleDTO vehicleDto) {
         Vehicle vehicle = vehicleMapper.toEntity(vehicleDto);
         vehicle = vehicleService.addVehicle(vehicle);
         vehicleDto = vehicleMapper.toDto(vehicle);
@@ -42,17 +43,19 @@ public class VehicleController implements VehicleApi {
     }
 
     @Override
-    public ResponseEntity<VehicleDto> vehicleUpdateIdPost(String id, VehicleDto vehicleDto) {
+    public ResponseEntity<Void> vehicleDeleteIdPost() {
+        return VehicleApi.super.vehicleDeleteIdPost();
+    }
+
+    @Override
+    public ResponseEntity<VehicleDTO> vehicleUpdateIdPost(String id, VehicleDTO vehicleDto) {
         Vehicle oldVehicle = vehicleMapper.toEntity(vehicleDto);
+
         Vehicle updatedVehicle = vehicleService.updateVehicle(Long.valueOf(id), oldVehicle);
         vehicleDto = vehicleMapper.toDto(updatedVehicle);
         return ResponseEntity.ok(vehicleDto);
     }
 
-    @Override
-    public ResponseEntity<Void> vehicleDeleteIdPost(String id) {
-        vehicleService.deleteVehicle(Long.valueOf(id));
-        return ResponseEntity.ok().build();
-    }
+
 
 }
