# src/main/resources/openapi/openapi.yaml
@@ -18,7 +18,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/VehicleDto'
+                  $ref: '#/components/schemas/Vehicle'
 
   /vehicle/{id}:
     post:
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VehicleDto'
+                $ref: '#/components/schemas/Vehicle'
 
   /vehicle/add:
     post:
@@ -49,14 +49,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/VehicleDto'
+              $ref: '#/components/schemas/Vehicle'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VehicleDto'
+                $ref: '#/components/schemas/Vehicle'
 
   /vehicle/update/{id}:
     post:
@@ -74,14 +74,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/VehicleDto'
+              $ref: '#/components/schemas/Vehicle'
       responses:
         '200':
           description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/VehicleDto'
+                $ref: '#/components/schemas/Vehicle'
 
   /vehicle/delete/{id}:
     post:
@@ -89,18 +89,21 @@ paths:
         - vehicle
       summary: Delete vehicle
       parameters:
-        - in: path
-          name: id
-          schema:
-            type: string
-          required: true
+        - $ref: "#/components/parameters/XUser"
       responses:
         '200':
           description: Success
 
 components:
+  parameters:
+    XUser:
+      in: header
+      name: 'X-User'
+      required: true
+      schema:
+        $ref: '#/components/schemas/XUser'
   schemas:
-    UserContext:
+    XUser:
       type: object
       required:
         - userId
@@ -129,7 +132,37 @@ components:
         - CompanyAdmin
         - Standard
         -
-    VehicleDto:
+    VehicleListRequest:
+      type: object
+      properties:
+        from:
+          type: integer
+          default: 0
+        size:
+          type: integer
+          default: 20
+        term:
+          type: string
+
+    VehicleListResponse:
+      type: object
+      properties:
+        total:
+          type: integer
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/Vehicle'
+    Error:
+      type: object
+      properties:
+        code:
+          type: string
+        message:
+          type: string
+
+
+    Vehicle:
       type: object
       required:
         - numberPlate
@@ -153,10 +186,10 @@ components:
           type: integer
 
   securitySchemes:
-    UserContext:
+    SecurityHeader:
       type: apiKey
       in: header
       name: X-User
 
 security:
-  - UserContext: []
+  - SecurityHeader: []
